--- a/index.html
+++ b/index.html
@@ -5,10 +5,67 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   
+    <link rel="stylesheet" href="assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css">
+    <script src="assets/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/jquery/jquery-3.2.1.min.js"></script>
+    <script src="assets/jquery.ripples/jquery.ripples-min.js"></script>
+    <script src="js/index.js"></script>
     <title>Document</title>
 </head>
 <body>
-Hello World
+<div class="banner">
+    <div class="coco"></div>
+    <nav class="navbar navbar-expand-lg position-sticky top-0 glass">
+        <div class="container-fluid">
+            <a class="navbar-brand ps-3" href="#"><h2>Waruna Udayanga</h2></a>
+        </div>
+    </nav>
+    <button class="btn btn-outline-light glass click-me d-block mx-auto"><span>Click Me</span></button>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </body>
 </html>
