--- a/index.html
+++ b/index.html
@@ -15,15 +15,48 @@
     <title>Document</title>
 </head>
 <body>
-<div class="banner">
-    <div class="coco"></div>
-    <nav class="navbar navbar-expand-lg position-sticky top-0 glass">
+<section class="navbar-container position-sticky top-0 scrolled">
+    <nav class="navbar navbar-expand-lg glass">
         <div class="container-fluid">
-            <a class="navbar-brand ps-3" href="#"><h2>Waruna Udayanga</h2></a>
+            <a class="navbar-brand ps-3" href="#">Waruna Udayanga</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">My Projects</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
+</section>
+<div class="banner">
+    <div class="coco"></div>
     <button class="btn btn-outline-light glass click-me d-block mx-auto"><span>Click Me</span></button>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
