--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
 </head>
 <body>
-<section class="navbar-container position-sticky top-0 scrolled">
+<section class="navbar-container position-sticky top-0">
     <nav class="navbar navbar-expand-lg glass">
         <div class="container-fluid">
             <a class="navbar-brand ps-3" href="#">Waruna Udayanga</a>
