--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="assets/jquery/jquery-3.2.1.min.js"></script>
     <script src="assets/jquery.ripples/jquery.ripples-min.js"></script>
     <script src="js/index.js"></script>
-    <title>Document</title>
+    <title>Waruna Udayanga</title>
 </head>
 <body class="padding">
 <div class="navbar-container position-fixed top-0 w-100">
