--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
             <div class="greeting d-flex flex-column align-items-center">
                 <div class="glass s1 m-0 py-1 px-3 mb-3">Hello.</div>
                 <div class="glass s2 m-0 pt-1 pb-2 px-3 mb-3">I'm Waruna Udayanga</div>
-                <div class="glass s3 m-0 pt-1 pb-2 px-3">I am a Web Developer</div>
-                <div class="glass s3 m-0 pt-1 pb-2 px-3"> and a Software Developer</div>
+                <div class="glass s3 m-0 pt-1 pb-2 px-3">Web Developer | Software Developer</div>
             </div>
             <button class="btn btn-outline-light glass bordered click-me d-block mx-auto"><span>View More <i class="fas fa-angle-down"></i></span></button>
         </div>
