--- a/home.html
+++ b/home.html
@@ -1,13 +1,17 @@
 <section class="anchor" id="about"></section>
 <h1 class="mt-3 mb-5"><small class="text-muted">#</small> About Me</h1>
 
+<div class="row">
+    <h2>Let me introduce myself.</h2>
+</div>
+
 <section class="anchor mb-3" id="projects"></section>
 <h1 class="mt-3 mb-5"><small class="text-muted">#</small> My Projects</h1>
 
 <div class="row">
     <div class="col-md-6 col-sm-12 mb-5">
         <div class="card shadow h-100">
-            <img src="resources/images/erp/001.png" class="card-img-top" alt="...">
+            <img src="resources/images/erp/erp.png" class="card-img-top project-thumb" alt="...">
             <div class="card-body d-flex flex-column">
                 <h5 class="card-title">ERP System</h5>
                 <p class="card-text">An ERP System (Point of Sale) with HTML, CSS + Spring MVC</p>
@@ -17,7 +21,7 @@
     </div>
     <div class="col-md-6 col-sm-12 mb-5">
         <div class="card shadow h-100">
-            <img src="resources/images/cge/004.png" class="card-img-top" alt="...">
+            <img src="resources/images/cge/cge.png" class="card-img-top project-thumb" alt="...">
             <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Weighing Software</h5>
                 <p class="card-text">Angular + Spring Boot + Electron application for Weighing indication and reporting features. </p>
