--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/jquery-confirm-v3.3.4/jquery-confirm.min.css">
     <link rel="stylesheet" href="assets/fontawesome-free-5.15.3-web/css/all.min.css">
@@ -17,7 +18,16 @@
     <script src="js/index.js"></script>
     <title>Waruna Udayanga</title>
 </head>
-<body class="padding">
+<body class="padding loading">
+<div class="loader-backdrop">
+    <div class="load-holder">
+        <div class="m-loader">
+            <span class="e-text">Loading</span>
+        </div>
+    </div>
+    <div id="particleCanvas-Blue"></div>
+    <div id="particleCanvas-White"></div>
+</div>
 <div class="navbar-container position-fixed top-0 w-100">
     <nav class="navbar navbar-expand-lg glass">
         <div class="container-fluid">
@@ -49,7 +59,7 @@
             <div class="greeting d-flex flex-column align-items-center">
                 <div class="glass s1 m-0 py-1 px-3 mb-3">Hello.</div>
                 <div class="glass s2 m-0 pt-1 pb-2 px-3 mb-3">I'm Waruna Udayanga</div>
-                <div class="glass s3 m-0 pt-1 pb-2 px-3">Web Developer | Software Developer</div>
+                <div class="glass s3 m-0 pt-1 pb-2 px-3">Web Developer | Software Engineer</div>
             </div>
             <button class="btn btn-outline-light glass bordered click-me d-block mx-auto"><span>View More <i class="fas fa-angle-down"></i></span></button>
         </div>
