--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/loader.css">
+    <script src="assets/jquery/jquery-3.2.1.min.js"></script>
+    <script src="assets/particles/particles.min.js"></script>
     <link rel="stylesheet" href="assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/jquery-confirm-v3.3.4/jquery-confirm.min.css">
     <link rel="stylesheet" href="assets/fontawesome-free-5.15.3-web/css/all.min.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
-    <script src="assets/jquery/jquery-3.2.1.min.js"></script>
     <script src="assets/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/jquery-confirm-v3.3.4/jquery-confirm.min.js"></script>
     <script src="assets/jquery.ripples/jquery.ripples-min.js"></script>
@@ -25,8 +26,7 @@
             <span class="e-text">Loading</span>
         </div>
     </div>
-    <div id="particleCanvas-Blue"></div>
-    <div id="particleCanvas-White"></div>
+    <div id="particles-js"></div>
 </div>
 <div class="navbar-container position-fixed top-0 w-100">
     <nav class="navbar navbar-expand-lg glass">
