--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
         </div>
     </div>
 </div>
-<div id="content" class="container overflow-hidden"></div>
+<div id="content" class="container"></div>
 </body>
 </html>
