--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/loader.css">
     <script src="assets/jquery/jquery-3.2.1.min.js"></script>
     <script src="assets/particles/particles.min.js"></script>
+    <script src="js/loader.js"></script>
     <link rel="stylesheet" href="assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/jquery-confirm-v3.3.4/jquery-confirm.min.css">
     <link rel="stylesheet" href="assets/fontawesome-free-5.15.3-web/css/all.min.css">
