--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#home">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#about">About Me</a>
-                        </li>
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link" aria-current="page" href="#about">About Me</a>-->
+<!--                        </li>-->
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#projects">My Projects</a>
                         </li>
@@ -76,13 +76,13 @@
 
             <section class="padding" id="home"></section>
 
-            <section class="anchor" id="about"></section>
-            <h1 class="mt-3 mb-5"><small class="text-muted">#</small> About Me</h1>
+<!--            <section class="anchor" id="about"></section>-->
+<!--            <h1 class="mt-3 mb-5"><small class="text-muted">#</small> About Me</h1>-->
 
-            <div class="row">
-                <h2>Let me introduce myself.</h2>
-                <h4>Me me me.</h4>
-            </div>
+<!--            <div class="row">-->
+<!--                <h2>Let me introduce myself.</h2>-->
+<!--                <h4>Me me me.</h4>-->
+<!--            </div>-->
 
             <section class="anchor mb-3" id="projects"></section>
             <h1 class="mt-3 mb-5"><small class="text-muted">#</small> My Projects</h1>
