--- a/index.alt.html
+++ b/index.alt.html
@@ -66,7 +66,7 @@
                 <div class="greeting d-flex flex-column align-items-center">
                     <div class="glass s1 m-0 py-1 px-3 mb-3">Hello.</div>
                     <div class="glass s2 m-0 pt-1 pb-2 px-3 mb-3">I'm Waruna Udayanga</div>
-                    <div class="glass s3 m-0 pt-1 pb-2 px-3">Web Developer | Software Engineer</div>
+                    <div class="glass s3 m-0 pt-1 pb-2 px-3">Software Engineer | Web Developer</div>
                 </div>
                 <button class="btn btn-outline-light glass bordered click-me d-block mx-auto"><span>View More <i class="fas fa-angle-down"></i></span></button>
             </div>
@@ -80,15 +80,20 @@
             <section class="padding" id="home"></section>
 
             <section class="anchor" id="about"></section>
-            <h1 class="mt-3 mb-5"><small class="text-muted">#</small> About Me</h1>
+            <h1 class="mt-3 mb-3 text-center robo-r fw-bold"><small class="text-muted">#</small> Let me introduce myself. </h1>
 
             <div class="row">
-                <h2>Let me introduce myself.</h2>
-                <h4>Me me me.</h4>
+                <h2 class="fw-bold"></h2>
+                <h4 class="offset-1 offset-md-1 offset-lg-1 col-10 col-md-10 col-lg-10 text-responsive">
+                    I am a Sri Lankan based Software Engineer and a Full Stack Web Developer. I design Web Applications,
+                    front-end with Angular&nbsp;+&nbsp;Material, Bootstrap&nbsp;+&nbsp;jQuery, HTML, CSS and back-end with NodeJS&nbsp;+&nbsp;Express,
+                    Java&nbsp;+&nbsp;Spring Boot, As well as Desktop Applications based on above technologies with teh use of ElectronJS.
+                    I also develop Desktop Application in JavaFX.
+                </h4>
             </div>
 
             <section class="anchor mb-3" id="projects"></section>
-            <h1 class="mt-3 mb-5"><small class="text-muted">#</small> My Projects</h1>
+            <h1 class="mt-3 mb-5 robo-r fw-bold"><small class="text-muted">#</small> My Projects</h1>
 
             <div class="row">
                 <div class="col-md-6 col-sm-12 mb-5">
