--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <script src="assets/jquery-confirm-v3.3.4/jquery-confirm.min.js"></script>
     <script src="assets/jquery.ripples/jquery.ripples-min.js"></script>
     <script src="js/index.js"></script>
+    <script>
+        // $(()=>{$('.loader-backdrop').hide()});
+    </script>
     <title>Waruna Udayanga</title>
 </head>
 <body>
@@ -42,9 +45,9 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#home">Home</a>
                         </li>
-<!--                        <li class="nav-item">-->
-<!--                            <a class="nav-link" aria-current="page" href="#about">About Me</a>-->
-<!--                        </li>-->
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#about">About Me</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#projects">My Projects</a>
                         </li>
@@ -76,16 +79,21 @@
 
             <section class="padding" id="home"></section>
 
-<!--            <section class="anchor" id="about"></section>-->
-<!--            <h1 class="mt-3 mb-5"><small class="text-muted">#</small> About Me</h1>-->
+            <section class="anchor" id="about"></section>
+            <h1 class="mt-3 mb-3 text-center robo-r fw-bold"><small class="text-muted">#</small> Let me introduce myself. </h1>
 
-<!--            <div class="row">-->
-<!--                <h2>Let me introduce myself.</h2>-->
-<!--                <h4>Me me me.</h4>-->
-<!--            </div>-->
+            <div class="row">
+                <h2 class="fw-bold"></h2>
+                <h4 class="offset-1 offset-md-1 offset-lg-1 col-10 col-md-10 col-lg-10 text-responsive">
+                    I am a Sri Lankan based Software Engineer and a Full Stack Web Developer. I design Web Applications,
+                    front-end with Angular&nbsp;+&nbsp;Material, Bootstrap&nbsp;+&nbsp;jQuery, HTML, CSS and back-end with NodeJS&nbsp;+&nbsp;Express,
+                    Java&nbsp;+&nbsp;Spring Boot, As well as Desktop Applications based on above technologies with teh use of ElectronJS.
+                    I also develop Desktop Application in JavaFX.
+                </h4>
+            </div>
 
             <section class="anchor mb-3" id="projects"></section>
-            <h1 class="mt-3 mb-5"><small class="text-muted">#</small> My Projects</h1>
+            <h1 class="mt-3 mb-5 robo-r fw-bold"><small class="text-muted">#</small> My Projects</h1>
 
             <div class="row">
                 <div class="col-md-6 col-sm-12 mb-5">
