--- a/index.html
+++ b/index.html
@@ -136,22 +136,6 @@
                     </div>
                 </div>
 
-<!--                <div class="row mt-4">-->
-<!--                    <div class="offset-1 offset-md-1 offset-lg-1 col-10 col-md-10 col-lg-10 text-responsive">-->
-<!--                        <a class="d-flex align-items-center" href="mailto:avawaruna@gmail.com">-->
-<!--                            <img src="resources/images/icons/email.png" class="about-icon" alt="phone">-->
-<!--                            <h5 class="fw-bold ps-3">avawaruna@gmail.com</h5>-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="row mt-4">-->
-<!--                    <div class="offset-1 offset-md-1 offset-lg-1 col-10 col-md-10 col-lg-10 text-responsive">-->
-<!--                        <a class="d-flex align-items-center" href="https://www.linkedin.com/in/warunaudayanga/" target="_blank">-->
-<!--                            <img src="resources/images/icons/linkedin.png" class="about-icon" alt="phone">-->
-<!--                            <h5 class="fw-bold ps-3">warunaudayanga</h5>-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                </div>-->
             </section>
 
             <section class="anchor mb-3" id="projects"></section>
@@ -180,6 +164,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-6 col-sm-12 mb-5 m-auto mt-5">
+                        <div class="card shadow mt-5 mx-5">
+                            <div class="card-body d-flex flex-column text-center">
+                                <h1 class="card-title">Making some changes</h1>
+                                <p class="card-text">We are still building...</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -188,42 +180,7 @@
             <br>
             <br>
             <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+
         </div>
 
     </div>
