--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">ERP System</h5>
                                 <p class="card-text">An ERP System (Point of Sale) with HTML, CSS + Spring MVC</p>
-                                <button onclick="popup('erp', 'Project Details', 'View Application', 'btn-blue', 'https://fastsolutions.herokuapp.com/')" class="btn btn-dark mt-auto">View Details</button>
+                                <button onclick="popup('erp', 'Project Details', 'View Application', 'btn-dark', 'https://fastsolutions.herokuapp.com/')" class="btn btn-dark mt-auto">View Details</button>
                             </div>
                         </div>
                     </div>
@@ -164,6 +164,18 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-6 col-sm-12 mb-5">
+                        <div class="card shadow h-100">
+                            <img src="resources/images/laknewan/laknewan.png" class="card-img-top project-thumb" alt="...">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Shopping Website (Collaborative Project)</h5>
+                                <p class="card-text">Online Shopping Website created with PHP. </p>
+                                <button onclick="popup('laknewan', 'Project Details', 'View Website', 'btn-primary', 'https://laknewan.com/')" class="btn btn-primary mt-auto">View Details</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-md-6 col-sm-12 mb-5 m-auto mt-5">
                         <div class="card shadow mt-5 mx-5">
                             <div class="card-body d-flex flex-column text-center">
